# demesne

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  readme.md  rustfmt.toml
.devops/: rocm.Dockerfile
llama_sys/: Cargo.toml  build.rs
llama_sys/src/: control.rs  lib.rs  sampling.rs
src/: main.rs  openai.rs  prompt.rs  radix.rs
