[workspace]
members  = ["llama_sys"]
resolver = "2"

[package]
name    = "demesne"
version = "0.1.0"
edition = "2021"
publish = false

[features]
rocm = ["llama_sys/rocm"]
cuda = ["llama_sys/cuda"]

[dependencies]
llama_sys          = { path = "llama_sys" }
petgraph           = { version = "0.6.5", features = ["stable_graph"] }
structopt          = "0.3.26"
futures            = "0.3.30"
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rocket             = { version = "0.5", features = ["json"] }
validator          = { version = "0.18.1", features = ["derive"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0.26"
either             = "1.12.0"
thiserror          = "1.0.61"
num_cpus           = "1.16"
