[workspace]
members  = ["llama_sys"]
resolver = "2"

[package]
name    = "demesne"
version = "0.1.0"
edition = "2021"
publish = false

[features]
rocm = ["llama_sys/rocm"]
cuda = ["llama_sys/cuda"]

[dependencies]
llama_sys    = { path = "llama_sys" }
async-openai = { git = "https://github.com/nytopop/async-openai", branch = "fixes" }

petgraph           = { version = "0.6.5", features = ["stable_graph"] }
structopt          = "0.3.26"
futures            = "0.3.30"
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rocket             = { version = "0.5", features = ["json"] }
serde              = { version = "1.0", features = ["derive"] }
either             = "1.12.0"
thiserror          = "1.0.61"
num_cpus           = "1.16"
once_cell          = "1.19.0"
constant_time_eq   = "0.3.0"
