[workspace]
members = ["llama_sys"]
resolver = "2"

[package]
name = "demesne"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
sve = ["llama_sys/sve"]
cpu_hbm = ["llama_sys/cpu_hbm"]
cuda = ["llama_sys/cuda"]
cuda_force_mmq = ["llama_sys/cuda_force_mmq"]
rocm = ["llama_sys/rocm"]
rocm_uma = ["llama_sys/rocm_uma"]
vulkan = ["llama_sys/vulkan"]
metal = ["llama_sys/metal"]
kompute = ["llama_sys/kompute"]

[dependencies]
llama_sys = { path = "llama_sys" }
async-openai = { git = "https://github.com/nytopop/async-openai", branch = "fixes" }

petgraph = { version = "0.6.5", features = ["stable_graph"] }
structopt = "0.3.26"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
either = "1.12.0"
thiserror = "1.0.61"
num_cpus = "1.16"
constant_time_eq = "0.3.0"
