[package]
name = "llama_sys"
version = "0.1.0"
edition = "2021"

[features]
sve = []
cpu_hbm = []
accelerate = []
blas = []
sgemm = []
cuda = []
cuda_force_mmq = []
rocm = []
rocm_uma = []
vulkan = []
metal = []
kompute = []

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.69.4"

[dependencies]
thiserror = "1.0.61"
rand = "0.8.5"
bitflags = "2.5.0"
